--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/01000001kuma/adrianmolina.git"
+    "url": "https://github.com/01000001kuma/adrianmolina.git"
   },
   "author": "Adrian Molina",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/01000001kuma/My-Portfolio/issues"
+    "url": "https://github.com/01000001kuma/adrianmolina/issues"
   },
   "homepage": "https://01000001kuma.github.io/adrianmolina",
   "devDependencies": {
